docs update: - add favicons; - add opengraph; - enable navigation by keyboard; - fix displaying on mobile devices.

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -1,8 +1,4 @@
 .sidebar-container, .toc-drawer {
     box-sizing: border-box;
-    width: 25em;
-}
-
-.sidebar-drawer {
-    min-width: 25em;
+    width: unset;
 }
